# Hackathon

./: .gitignore  Dockerfile  README.md  pyproject.toml
.agents/skills/: api-contract.md  python-conventions.md
Bizplus/: README.md  pubspec.yaml
Bizplus/lib/: main.dart
Bizplus/linux/: CMakeLists.txt  my_application.cc
Bizplus/test/: widget_test.dart
Bizplus/web/: index.html  manifest.json
Bizplus/windows/: CMakeLists.txt
Pulse-AI-main/: README.md
Pulse-AI-main/agents/: run_pipeline.py
Pulse-AI-main/config/: policies.yaml
Pulse-AI-main/mobile/: INTEGRATION_NOTES.md  README.md  pubspec.yaml
Pulse-AI-main/pulseai.egg-info/: PKG-INFO
Pulse-AI-main/tests/: test_conflict_agent.py  test_executor.py  test_monitor_outcome.py  test_temporal.py
agents/: gen_mock_data.py  run_pipeline.py
agents/common/: policy.py
backend/: .dockerignore  BACKEND CLAUDE.md  How to use.md  cloudbuild.yaml  main.py  pyproject.toml  start_backend.sh
backend/api/: models.py  pipeline_runner.py  trace_packer.py
backend/api/ws/: hub.py
backend/mock_services/: campaign.py  email.py  monitor.py  pricing.py  push.py
backend/pulseai_backend.egg-info/: PKG-INFO  SOURCES.txt
backend/routers/: scenarios.py  websocket.py
backend/schemas/: api.py
backend/services/: event_streamer.py  runner.py  state_reader.py
config/: policies.yaml
docs/: AGENT_HANDOFF.md
pulseai.egg-info/: SOURCES.txt  requires.txt
tests/: test_full_pipeline.py  test_gen_mock_data.py  test_ingestion_agent.py  test_insight_agent.py  test_planner.py  test_policy_checker.py  test_run_pipeline.py
(+124 files in other folders)
