[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pulseai"
version = "0.1.0"
description = "Autonomous Content-to-Action Agent for multi-region retail operations."
requires-python = ">=3.11"
dependencies = [
    "google-adk",
    "google-genai",
    "pandas>=2.2",
    "pypdf>=4.0",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "python-dateutil>=2.9",
    "reportlab>=4.0",
    "numpy>=1.26"
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4"
]

[tool.setuptools.packages.find]
include = ["agents*"]
