[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pulseai-backend"
version = "0.1.0"
description = "FastAPI backend for the PulseAI agent pipeline."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "pydantic>=2.7",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "watchfiles>=0.21",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["api*"]
